--- a/manifest.json
+++ b/manifest.json
@@ -7,14 +7,14 @@
     "service_worker": "background.js"
   },
   "icons": {
-    "16": "./logo.png",
-    "48": "./logo.png",
-    "128": "./logo.png"
+    "16": "logo.png",
+    "48": "logo.png",
+    "128": "logo.png"
   },
   "browser_action": {
     "default_icon": {
-      "16": "./logo.png",
-      "48": "./logo.png",
-      "128": "./logo.png"
+      "16": "logo.png",
+      "48": "logo.png",
+      "128": "logo.png"
     }}
 }
